<resources>
    <string name="app_name">Sorteador para Jogos</string>
    <string name="jogar_dados">Jogar Dados</string>
    <string name="cronometro_xadrez">Cronômetro Xadrez</string>
    <string name="marcador_tempo">Marcador Tempo</string>
    <string name="roleta">Roleta</string>
    <string name="qtde_dados">Quantidade de dados:</string>
    <string name="qtde_faces">Quantidade de faces:</string>
    <string name="ok">OK</string>
    <string name="jogador_1">Jogador 1</string>
    <string name="jogar">Jogar</string>
    <string name="jogador_2">Jogador 2</string>
    <string name="parar_contagem">Parar Contagem</string>
    <string name="iniciar_contagem">Iniciar Contagem</string>
    <string name="contagem_regressiva">Contagem regressiva</string>
    <string name="cronometro">Cronômetro</string>
</resources>
