<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_fundo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/amarelo_texto"
            android:textSize="28dp"
            android:text="Tempo:" />

        <NumberPicker
            android:id="@+id/np_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:solidColor="@color/amarelo_texto"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <NumberPicker
            android:id="@+id/np_minuto"
            android:layout_width="wrap_content"
            android:solidColor="@color/amarelo_texto"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <NumberPicker
            android:id="@+id/np_segundo"
            android:solidColor="@color/amarelo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_cronometro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/amarelo_texto"
                android:textSize="18dp"
                android:text="@string/cronometro" />

            <RadioButton
                android:id="@+id/rb_contagem_regressiva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/amarelo_texto"
                android:textSize="18dp"
                android:layout_weight="0.5"
                android:text="@string/contagem_regressiva" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/bt_iniciar_contagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:textColor="@color/amarelo_texto"
        android:padding="20dp"
        android:textSize="28dp"
        android:text="@string/iniciar_contagem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amarelo_texto"
        android:textSize="28dp"
        android:id="@+id/tv_tempo"/>

    <Button
        android:id="@+id/bt_parar_contagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:textColor="@color/amarelo_texto"
        android:padding="20dp"
        android:textSize="28dp"
        android:text="@string/parar_contagem" />

</LinearLayout>